--- a/src/views/index.html
+++ b/src/views/index.html
@@ -69,7 +69,7 @@
         </div>
         <!-- revisar el width -->
         
-        <section class="main_inferior">
+        <div class="main_inferior">
             <div class="informacion_tallas_compras">
                 <img src="images/imagenes ropa/Guia-5.jpg" class="guia-tallas">
                 <!-- <img src="images/fondos/fondoop8.jpg" class="fondo3"> -->
@@ -79,8 +79,12 @@
                 <img src="images/imagenes ropa/Cómo_encargar5.jpg" class="encargos">
                 <p class="boton"><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
             </div>
-        </section>
+        </div>
     </main>
+
+    <div class="linea">
+
+    </div>
 
     <footer>
         <div class="tres_columnas">
