--- a/src/views/store.html
+++ b/src/views/store.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swip - Moda personalizada</title>
-    <link rel="shortcut icon" href="/public/images/logo/favicon.ico">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="css/store.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
- 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Swip - Moda personalizada</title>
+        <link rel="shortcut icon" href="/images/logo/favicon.ico">
+        <link rel="stylesheet" href="./css/styles.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        rel="stylesheet"/>
+        <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
+        <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
+        <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
+    </head>
 <body>
     <header>
         <div class="encabezado">
@@ -19,12 +22,10 @@
                 <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
                 </div>
             </section>
-            <section></section>
             <div class = "busqueda">
                 <input class="search-bar"></input>
                 <button class="fas fa-search"></button>
             </div>
-           </section>
             <div class="login">
                 <div >
                     <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a> 
@@ -42,7 +43,7 @@
                 </div>
             </div>
         </div>
-    </header>
+        </header>
 
         <div class="encabezado">
             <section>
@@ -186,10 +187,7 @@
     </main>
 
     <footer>
-        <!-- //Ayuda
-        //Equipo
-        //Redes sociales
-        //@SWIP todos los derechos reservados -->
+        <div class="tres_columnas">
         <div class="col1footer">
             <section>
                 <h4>Ayuda</h4>
@@ -207,21 +205,28 @@
                 <h4>Equipo</h4>
             </section>
             <section>
+                <div class="equipo">
                 <div>
-                    <img src="" alt="Milagros">
+                    <img src="" alt="">
+                    <p>Milagros</p>
                 </div>
                 <div>
-                    <img src="" alt="David">
+                    <img src="" alt="">
+                    <p>David</p>
                 </div>
                 <div>
-                    <img src="" alt="Julieth">
+                    <img src="" alt="">
+                    <p>Julieth</p>
                 </div>
                 <div>
-                    <img src="" alt="Lautaro">
+                    <img src="" alt="">
+                    <p>Lautaro</p>
                 </div>
                 <div>
-                    <img src="" alt="Juan">
+                    <img src="" alt="">
+                    <p>Juan</p>
                 </div>
+            </div>
             </section>
         </div>
         <div class="col3footer">
@@ -229,12 +234,14 @@
                 <h4>Redes Sociales</h4>
             </section>
             <section class="redes">
-                <div><img src="/images/simbolos/facebook.png" alt="Facebook"></div>
-                <div><img src="/images/simbolos/instagra2.png" alt="Instagram"></div>
-                <div><img src="/images/simbolos/whatsapp.png" alt="Whatsapp"></div>
-                <div><img src="/images/simbolos/arroba.png" alt="Email"></div>
+                <div><i class="fab fa-facebook"></i></div>
+                <div><i class="fab fa-instagram"></i></div>
+                <div><i class="fab fa-whatsapp"></i></div>
+                <div><i class="fas fa-at"></i>
+                </i></div>
             </section>
         </div>
+    </div>
         <div class="derechos">
             <p>@SWIP, Todos los derechos reservados</p>
         </div>
@@ -242,3 +249,5 @@
 </body>
 
 </html>
+
+
