--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -33,7 +33,7 @@
     flex-direction: column;
     justify-content: flex-start;
     background-color: #ffffffdc;
-    color:white;
+    color:rgb(255, 255, 255);
     width: 40%;
     padding: 2rem;
     border-radius: 0px;
@@ -56,7 +56,7 @@
   }
   
   input:focus {
-    background-color: #ffffff;
+    background-color: #000000;
     color: black;
     font-weight: bold;
   }
