--- a/src/views/login.html
+++ b/src/views/login.html
@@ -21,7 +21,7 @@
     <div class="encabezado">
         <section>
             <div class="logo">
-            <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
+            <a href="/"><img src="/images/Logo/logo.png"></a>
             </div>
         </section>
         <div class = "busqueda">
@@ -30,18 +30,18 @@
         </div>
         <div class="login">
             <div >
-                <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a> 
+                <a href="/login"><i class="far fa-user-circle"></i></a> 
             </div>
             <div class="texto-login">
-                <p><a href="/src/views/login.html">Iniciar sesión</a></p>
+                <p><a href="/login">Iniciar sesión</a></p>
             </div>
         </div>
         <div class="compras">
             <div class="bolsa">
-                <a href="/src/views/productCart.html"><i class="fas fa-shopping-bag"></i></a>
+                <a href="/productCart"><i class="fas fa-shopping-bag"></i></a>
             </div>
             <div class="carritocompras">
-                <p><a href="/src/views/productCart.html">Carrito de compras</a></p>
+                <p><a href="/productCart">Carrito de compras</a></p>
             </div>
         </div>
     </div>
@@ -114,9 +114,9 @@
                 <h4>Redes Sociales</h4>
             </section>
             <section class="redes">
-                <div><i class="fab fa-facebook"></i></div>
-                <div><i class="fab fa-instagram"></i></div>
-                <div><i class="fab fa-whatsapp"></i></div>
+                <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
+                <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
+                <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
                 <div><i class="fas fa-at"></i>
                 </i></div>
             </section>
