--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <%- include ("/partials/headerMain")%>
+    <%- include ("./partials/headerMain")%>
     <main>
-        <%- include ("/partials/headerNavBar")%>
+        <%- include ("./partials/headerNavBar")%>
         <!-- //banner
     //guia de tallas
     // imagen no definida -->
@@ -50,7 +50,7 @@
 
     </div>
 
-    <%- include ("/partials/footer")%>
+    <%- include ("./partials/footer")%>
 </body>
 
 </html>
