--- a/src/views/newProduct.ejs
+++ b/src/views/newProduct.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Creacion y Edicion de productos</title>
 </head>
 
@@ -27,7 +28,7 @@
                     <input type="text" name="categoria" id="categoria" placeholder="Categoria" required>
                 </div>
                 <div class="inputs">
-                    <h4>Elije tu foto de usuario</h4>
+                    <h4>Elije tu foto de producto</h4>
                     <br>
             
                 <input type="file" accept=".jpg,.png" name="fotoProducto" class="productos" id="fotoProducto">
