--- a/src/views/partials/headerNavBar.ejs
+++ b/src/views/partials/headerNavBar.ejs
@@ -1,6 +1,6 @@
 <nav class="navegacion">
     <ul>
-        <li><a href="/register">Hoodies</a></li>
+        <li><a href="/store">Hoodies</a></li>
         <li><a href="/register">Jeans</a></li>
         <li><a href="/register">Remeras</a></li>
         <li><a href="/register">Camperas</a></li>
