--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -18,7 +18,7 @@
         <div class="encabezado">
             <section>
                 <div class="logo">
-                    <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
+                    <a href="/"><img src="/images/Logo/logo.png"></a>
                 </div>
             </section>
             <div class="pasos">
