--- a/src/views/partials/headerNavBar.ejs
+++ b/src/views/partials/headerNavBar.ejs
@@ -1,9 +1,9 @@
 <nav class="navegacion">
     <ul>
         <li><a href="/store">Hoodies</a></li>
-        <li><a href="/register">Jeans</a></li>
-        <li><a href="/register">Remeras</a></li>
-        <li><a href="/register">Camperas</a></li>
-        <li><a href="/register">Tote bag</a></li>
+        <li><a href="/store">Jeans</a></li>
+        <li><a href="/store">Remeras</a></li>
+        <li><a href="/store">Camperas</a></li>
+        <li><a href="/store">Tote bag</a></li>
     </ul>
 </nav>
