--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,115 +10,167 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <title>Store</title>
     <link rel="stylesheet" href="/css/store.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
-<body>
-    <div class="page-nav">
-     <h1> Mi tienda Store</h1>
-    </div>
-     <div class="store-encabezado">
-        <h2> OFERTAS ESPECIALES</h2>
-    </div>
-    <div class="page-content">
-        <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto1.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy" onclick="add('producto1', 39500)">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto2.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto3.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto4.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto5.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto6.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto7.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto8.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto9.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto10.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto11.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto12.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto13.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-        
-    </div>
-    <div class="product-container">
-        <h3>Nombre :</h3>
-        <img src="images/store/producto1.jpg" alt="">
-        <p> $ 39500</p>
-        <button class="button-buy">Comprar</button>    
-         </div>
-    </div>
-</div>
-    
-</body>
+    <%- include ("./partials/headerMain")%>
+    <%- include ("./partials/headerNavBar")%>
+
+        <body>
+
+
+            <div class="store-encabezado">
+                <h2> STORE</h2>
+            </div>
+
+            <div class="store-subtitulo">
+                <h3>HOODIES</h3>
+            </div>
+
+            <div class="page-products">
+
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto7.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto8.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+                </div>
+                               
+            </div>
+
+            <div class="store-subtitulo">
+                <h3>JEANS</h3>
+            </div>
+
+            <div class="page-products">
+
+                <div class="product-container">
+                    <h3>Jean Cruces</h3>
+                    <img src="images/store/producto4.jpg" alt="">
+                    <p> $ 109500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto5.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto13.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+            </div>
+
+            <div class="store-subtitulo">
+                <h3>REMERAS</h3>
+            </div>
+
+            <div class="page-products">
+
+                <div class="product-container">
+                    <h3>Remera Azul</h3>
+                    <img src="images/store/producto1.jpg" alt="">
+                    <p> $ 40000</p>
+                    <button class="button-buy" onclick="add('producto1', 39500)">Comprar</button>
+
+                </div>
+                
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto6.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto9.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto10.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto11.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto12.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                
+                
+            </div>
+
+            <div class="store-subtitulo">
+                <h3>CAMPERAS</h3>
+            </div>
+
+            <div class="page-products">
+
+           
+                <div class="product-container">
+                    <h3>Nombre :</h3>
+                    <img src="images/store/producto8.jpg" alt="">
+                    <p> $ 39500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                
+            </div>
+
+            <div class="store-subtitulo">
+                <h3>TOTE BAG</h3>
+            </div>
+
+            <div class="page-products">
+
+                <div class="product-container">
+                    <h3>Tote Bag letras negras</h3>
+                    <img src="images/store/producto2.jpg" alt="">
+                    <p> $ 35500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                <div class="product-container">
+                    <h3>Tote Bag letras cafes</h3>
+                    <img src="images/store/producto3.jpg" alt="">
+                    <p> $ 35500</p>
+                    <button class="button-buy">Comprar</button>
+
+                </div>
+                
+            </div>
+
+
+        </body>
+    <%- include ("./partials/footer")%>
+
 </html>
