--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -14,15 +14,7 @@
 
 </head>
     <%- include ("./partials/headerMain")%>
-    <nav class="navegacion">
-        <ul>
-            <li><a href="/store">Hoodies</a></li>
-            <li><a href="#jeans">Jeans</a></li>
-            <li><a href="#remeras">Remeras</a></li>
-            <li><a href="#camperas">Camperas</a></li>
-            <li><a href="#totebag">Tote bag</a></li>
-        </ul>
-    </nav>
+    <%- include ("./partials/headerNavBar")%>
 
         <body>
 
