--- a/src/views/partials/headerNavBar.ejs
+++ b/src/views/partials/headerNavBar.ejs
@@ -1,9 +1,9 @@
 <nav class="navegacion">
     <ul>
-        <li><a href="/store">Hoodies</a></li>
-        <li><a href="/store">Jeans</a></li>
-        <li><a href="/store">Remeras</a></li>
-        <li><a href="/store">Camperas</a></li>
-        <li><a href="/store">Tote bag</a></li>
+        <li><a href="/store#hoodies">Hoodies</a></li>
+        <li><a href="/store#jeans">Jeans</a></li>
+        <li><a href="/store#remeras">Remeras</a></li>
+        <li><a href="/store#camperas">Camperas</a></li>
+        <li><a href="/store#totebag">Tote bag</a></li>
     </ul>
 </nav>
