--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -10,7 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <title>Store</title>
     <link rel="stylesheet" href="/css/store.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet"/>
+    <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
+    <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
 
 </head>
     <%- include ("./partials/headerMain")%>
